--- a/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
+++ b/frontend/src/components/Business/BusinessIndex/BusinessIndex.css
@@ -3,10 +3,10 @@
     display: flex;
     flex-direction: column;
     width: 100vw;
-    height: 100%;
+    height: 100vh;
     background-color: black;
     background-color: transparent;
-    height: 2000px;
+   
     overflow-y: scroll;
 }
 #bannerContainer {
@@ -16,7 +16,7 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-    height: min(700px, 50%);
+    height: min(500px, 50%);
     /* z-index:20; */
      /* background-color: red; */
     background-color: transparent;
@@ -114,14 +114,20 @@
 
 /* } */
 
-#cardContainer {
+.cardContainer {
     display: flex;
     justify-content: start;
     align-items: start;
     /* flex-grow: 1; */
     width: 100vw;
-    height: min(500px,50%);
+    height: 100%
 }
+
+.greenText {
+    color:var(--three)
+}
+
+
 
 
 
