--- a/frontend/src/components/Business/BusinessIndexDisplay/BusinessIndexDisplay.css
+++ b/frontend/src/components/Business/BusinessIndexDisplay/BusinessIndexDisplay.css
@@ -3,7 +3,7 @@
 #displayContainer {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+    justify-content: start;
     flex-wrap: wrap;
     width: 100%;
     height:100%;
