--- a/frontend/src/components/Reviews/PhotoUpload/PhotoUpload.css
+++ b/frontend/src/components/Reviews/PhotoUpload/PhotoUpload.css
@@ -1,6 +1,8 @@
 #uploadContainer {
    display:flex;
    flex-direction: column;
+   justify-content: center;
+   align-items: center;
    width: 100%;
    margin: 0;
    padding: 0;
