--- a/frontend/src/components/Reviews/ReviewNewSubmit/ReviewNewSubmit.css
+++ b/frontend/src/components/Reviews/ReviewNewSubmit/ReviewNewSubmit.css
@@ -1,7 +1,9 @@
 
 #reviewNewSubmitContainer {
     display: flex;
-
+    justify-content: center;
+    align-items: center; 
+ 
 
 }
 /* .blueButton {
