added linked in and github

--- a/frontend/src/components/Helpers/Caroursel/Carousel.css
+++ b/frontend/src/components/Helpers/Caroursel/Carousel.css
@@ -129,7 +129,7 @@
     font-weight: 800;
     letter-spacing: 0.25in;
     color: white;
-    margin-right: 500px; 
+    margin-right: 30%; 
     background-color: var(--two); 
     border-radius: 50px;
     
@@ -144,7 +144,7 @@
     font-weight: 800;
     letter-spacing: 0.25in;
     color: white;
-    margin-left: 500px; 
+    margin-left: 30%;
     background-color: var(--two); 
     border-radius: 50px;
     
