--- a/frontend/src/components/Navigation/NavButtons/NavButtons.css
+++ b/frontend/src/components/Navigation/NavButtons/NavButtons.css
@@ -5,7 +5,7 @@
     /* flex-grow:1; */
     justify-content: space-around;
     align-items: center;
-    width: calc(var(--nbh) * 6);
+    width: calc(var(--nbh) * 4);
     height: var(--nbh);
     padding-right: 50px;
 
@@ -22,4 +22,9 @@
 #review-button {
     background-color: transparent ;
     border: none;
+}
+
+.git {
+   
+    color:black;
 }
