--- a/frontend/src/components/Navigation/SearchBar/SearchBar.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBar.css
@@ -150,7 +150,7 @@
 } */
 
 
-/* .searchButton {
+.searchButton {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -165,7 +165,7 @@
     width: 100%;
     height: 100%;
     flex-grow: 1;
-} */
+}
 /* .SBInput {
     border: none;
     outline: none;
