--- a/frontend/src/components/Reviews/ReviewDisplayCard/ReviewDisplayCard.css
+++ b/frontend/src/components/Reviews/ReviewDisplayCard/ReviewDisplayCard.css
@@ -43,7 +43,10 @@
 
 
 #bodyCell {
-    justify-content: flex-start;
+    display:flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: start;
     width: 100%;
     padding-left: 20px;
     padding-top: 10px;
