the file upload is working for newReview

--- a/frontend/src/components/Reviews/RatingInput/RatingInput.css
+++ b/frontend/src/components/Reviews/RatingInput/RatingInput.css
@@ -13,6 +13,14 @@
     
     
 }
+.colored-in {
+  color: var(--two)
+
+}
+
+.not-colored-in {
+ color: gray;
+}
 
 #ratingContainer input[type="radio"] {
   display: none;
