--- a/frontend/src/components/Navigation/SearchBar/SearchBar.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBar.css
@@ -113,7 +113,7 @@
 .SBDropDown{
     display:flex;
     align-items: center;
-    color: black;
+    color: white;
     font-style: italic;
     font-size: smaller;
     padding:10px;
@@ -156,7 +156,7 @@
     align-items: center;
     height: 40px;
     width: 40px;
-    background-color: #5cb9ff;;
+    background-color: var(--two);
     color: white;
     border-radius: 0px 7px 7px 0px;
 }
