--- a/frontend/src/components/Reviews/ReviewNewSubmit/ReviewNewSubmit.css
+++ b/frontend/src/components/Reviews/ReviewNewSubmit/ReviewNewSubmit.css
@@ -3,18 +3,6 @@
     display: flex;
     justify-content: center;
     align-items: center; 
+    margin-top: 50px;
  
-
 }
-/* .blueButton {
-    height: 35px;
-    padding: 3px;
-    border-radius: 5px;
-    color: white;
-    /* background-color: rgb(102, 102, 174); */
-    /* background-color: --;
-    padding-left: 10px;
-    padding-right: 10px;
-    margin: 30px 0px; */
-   
-/* } */ 
