--- a/frontend/src/components/Reviews/ReviewNewSubmit/ReviewNewSubmit.css
+++ b/frontend/src/components/Reviews/ReviewNewSubmit/ReviewNewSubmit.css
@@ -4,5 +4,10 @@
     justify-content: center;
     align-items: center; 
     margin-top: 50px;
+    width:100%;
  
+}
+
+.newReviewSubmit {
+    width: 100%;
 }
