--- a/frontend/src/components/Navigation/SearchBar/SearchBar.css
+++ b/frontend/src/components/Navigation/SearchBar/SearchBar.css
@@ -6,6 +6,7 @@
    width: calc(var(--nbh) * 10);;
    height: var(--nbh);
    margin-left: 15px;
+   
 }
 
 #formSB{ 
@@ -18,6 +19,7 @@
     padding-left: 7px;
     border-radius: 6px;
     background-color: white;
+    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
 }
 
 
