--- a/frontend/src/components/Reviews/ReviewDisplayCard/ReviewDisplayCard.css
+++ b/frontend/src/components/Reviews/ReviewDisplayCard/ReviewDisplayCard.css
@@ -10,6 +10,11 @@
     border: black 1px solid;
     border-radius: 15px;
     margin: 20px;
+    background-color: rgba(221, 239, 245, 0.8);
+    /* background-color: var(--four); */
+    
+    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
+    
 }
 #bodyCell {
     display:flex;
