--- a/frontend/src/components/Helpers/DisplayHours/DisplayHours.css
+++ b/frontend/src/components/Helpers/DisplayHours/DisplayHours.css
@@ -23,7 +23,7 @@
     margin-right: 15px;
     background-color: var(--three);
     border-radius: 3px;
-    
+    box-shadow: 0 5px 7px rgba(0, 0, 0, 0.3);
 
 }
 
