--- a/frontend/src/components/Reviews/ReviewEdit/ReviewEdit.css
+++ b/frontend/src/components/Reviews/ReviewEdit/ReviewEdit.css
@@ -73,6 +73,8 @@
     justify-content: center;
     align-items: center;
     width: 130px;
+   
+    border-radius: 7px;
 }
 
 .ratingReview {
@@ -82,4 +84,12 @@
 }
 .reviewButton {
     width: 250px;
+}
+
+.formPhoto {
+    width: 150px;
+    height: 150px;
+    margin-top: 35px;
+    border-radius: 15px;
+    
 }
