add preview to add image

--- a/frontend/src/components/Reviews/ReviewNew/ReviewNew.css
+++ b/frontend/src/components/Reviews/ReviewNew/ReviewNew.css
@@ -64,6 +64,12 @@
     /* background-color: pink; */
     
 }
+.imgRN {
+
+    height: 100px;
+    margin-top: 15px;
+    border-radius: 15px;
+}
 
 
 
