--- a/frontend/src/components/Helpers/Caroursel/Carousel.css
+++ b/frontend/src/components/Helpers/Caroursel/Carousel.css
@@ -1,49 +1,44 @@
 .slider-container {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .slider {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
 }
 
 .slide {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    overflow: hidden;
 }
 
 .active {
-  z-index: 1;
+    z-index: 1;
 }
 
 .slide > * {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
-
-
-
-
-
-  #heroContainer{
+#heroContainer {
     background-size: cover;
     background-position: center;
     width: 100%;
@@ -55,7 +50,7 @@
     /* z-index: -1; */
     /* background-color: aqua; */
 }
-  .businessShowContainer2{
+.businessShowContainer2 {
     /* position: relative; */
     display: flex;
     justify-content: center;
@@ -63,11 +58,10 @@
     width: 100vw;
     height: 100vh;
 
-   
     /* background-color: blue; */
 }
 
-  .carTitle {
+.carTitle {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -79,11 +73,12 @@
     margin-left: 100px;
     margin-bottom: 20px;
     text-shadow: 3px 3px var(--two);
-   
-    
-  }
+    box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.4);
+    background-color: green;
+}
 
-  .carTitle1 {
+.carTitle1 {
+    /* words on banner like "Eat Well" */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -91,10 +86,10 @@
     height: 100px;
     font-size: 0.7in;
     font-weight: 800;
-    color: white;   
-  }
+    color: white;
+}
 
-  .carTitle2 {
+.carTitle2 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -102,10 +97,10 @@
     height: 50px;
     font-size: 0.5in;
     font-weight: 800;
-    color: white;  
-  }
+    color: white;
+}
 
-  .carTitleSpace {
+.carTitleSpace {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -114,26 +109,10 @@
     font-size: 0.7in;
     font-weight: 800;
     letter-spacing: 0.25in;
-    color: white; 
-
-  }
-
-  .carTitle4 {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 900px;
-    height: 150px;
-    font-size: 0.7in;
-    font-weight: 800;
-    letter-spacing: 0.25in;
     color: white;
-    margin-right: 30%; 
-    background-color: var(--two); 
-    border-radius: 50px;
-    
-  }
-  .carTitle44 {
+}
+
+.carTitle4 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -141,14 +120,30 @@
     height: 150px;
     font-size: 0.7in;
     font-weight: 800;
-    letter-spacing: 0.25in;
+    letter-spacing: 0.15in;
+    color: white;
+    margin-right: 30%;
+    background-color: var(--two);
+    border-radius: 50px;
+    box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.4);
+}
+
+.carTitle44 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 900px;
+    height: 150px;
+    font-size: 0.7in;
+    font-weight: 800;
+    letter-spacing: 0.15in;
     color: white;
     margin-left: 30%;
-    background-color: var(--two); 
+    background-color: var(--two);
     border-radius: 50px;
-    
-  }
-  .carTitle444 {
+    box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.4);
+}
+.carTitle444 {
     display: flex;
     align-items: center;
     justify-content: center;
@@ -156,20 +151,20 @@
     height: 150px;
     font-size: 0.7in;
     font-weight: 800;
-    letter-spacing: 0.25in;
+    letter-spacing: 0.15in;
     color: white;
-    background-color: var(--two); 
+    background-color: var(--two);
     border-radius: 50px;
-    
-  }
+    box-shadow: inset 0 -5px 0 rgba(0, 0, 0, 0.4);
+}
 
-  .containerCAR1{
+.containerCAR1 {
     display: flex;
     justify-content: center;
     align-items: center;
-  }
+}
 
-  .titleCar {
+.titleCar {
     font-size: 1.3in;
     font-weight: 400;
     opacity: 0.8;
@@ -178,9 +173,4 @@
     margin-left: 100px;
     margin-bottom: 20px;
     text-shadow: 3px 3px var(--two);
-
-  }
-
-
-
-  
+}
