--- a/frontend/src/components/Reviews/RatingDisplay/RatingDisplay.css
+++ b/frontend/src/components/Reviews/RatingDisplay/RatingDisplay.css
@@ -1,19 +1,18 @@
-
 .ratingsContainer {
-    display:flex;
-    margin: 10px 0px;   
+    display: flex;
+    margin: 10px 0px;
 }
 
 .colored-in {
-    color: var(--two)
+    color: var(--two);
 }
 
 .not-colored-in {
-   color: gray;
+    color: gray;
 }
 
 /*  enlarges stars for the BusinessShowDisplay */
-.starDisplay { 
+.starDisplay {
     transform: scale(3);
-    margin: 25px;   
+    margin: 25px;
 }
