--- a/frontend/src/components/Reviews/RatingInput/RatingInput.css
+++ b/frontend/src/components/Reviews/RatingInput/RatingInput.css
@@ -1,50 +1,34 @@
-
-
-
-
-
 #ratingContainer {
-    display:flex;
+    display: flex;
     flex-direction: row;
     margin-top: 30px;
-    margin-bottom: 10px;    
+    margin-bottom: 10px;
     align-items: center;
     width: 100%;
-    
-    
 }
 .colored-in {
-  color: var(--two)
-
+    color: var(--two);
 }
 
 .not-colored-in {
- color: gray;
+    color: gray;
 }
 
 #ratingContainer input[type="radio"] {
-  display: none;
+    display: none;
 }
-/* #ratingContainer input[type="radio"]:checked + label {
-  color: #fff;
-  background-color: #007bff;
-} */
 #ratingContainer label:hover {
- 
-  color: #59a1e0;
+    color: #59a1e0;
 }
 .star {
-  transform: scale(1.5);
-  margin: 7px;
+    transform: scale(1.5);
+    margin: 7px;
 }
 
-
 .colored-in {
-    color: var(--two)
-
+    color: var(--two);
 }
 
 .not-colored-in {
-   color: gray;
+    color: gray;
 }
-
