--- a/frontend/src/components/Helpers/Caroursel/Carousel.css
+++ b/frontend/src/components/Helpers/Caroursel/Carousel.css
@@ -42,13 +42,10 @@
     background-size: cover;
     background-position: center;
     width: 100%;
-    /* height: 600px;; */
     display: flex;
     flex-direction: column;
     justify-content: end;
     align-items: start;
-    /* z-index: -1; */
-    /* background-color: aqua; */
 }
 .businessShowContainer2 {
     /* position: relative; */
@@ -174,3 +171,25 @@
     margin-bottom: 20px;
     text-shadow: 3px 3px var(--two);
 }
+
+.slider {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100vh; 
+}
+
+.slide {
+  position: absolute; 
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+@keyframes fadeIn {
+  0% { opacity: 0; }
+  100% { opacity: 1; }
+}
+
