--- a/frontend/src/components/Auth/SignupForm/SignupForm.css
+++ b/frontend/src/components/Auth/SignupForm/SignupForm.css
@@ -1,41 +1,53 @@
-
-
-#signupFormContainer {
-    display: flex;
+#combinedFormContainer{
+    position: absolute;
+    display:flex;
     flex-direction: column;
     align-items: center;
-    margin: 75px 300px 300px 300px;
-    width: 450px;
-    /* background-color: lightblue; */
+    justify-content: center;
+    width:30rem;
+    height:30rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border-radius: 1rem;
+    background-color: white;
+}
+
+#signupFormContainer {
+    position: relative;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 28rem;
+    height: 28rem;
+    background-color: white;
 }
 
 #titleSUF {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 40px;
-    width: 400px;
+    height: 3rem;
+    width: 23rem;
     font-size: 20px;
     font-weight: bolder;
     color: var(--two);
     background-color: white;  
 }
-f#inputForm {
+#inputForm {
     display: flex;
     flex-direction: column;
     justify-content: space-around;
-    width: 400px;
+    width: 2rem;
     /* background-color: pink; */
-    margin: 20px 0px 20px 0px;
    
 }
-
-
 
 .inputSUF {
     height: 30px;
     border-radius: 5px;
-    margin: 5px;
+    margin: 0.25rem;
 
 }
 .inputSUF:not(#submit) {
@@ -45,7 +57,7 @@ f#inputForm {
 #submitSUF {
     height: 35px;
     border-radius: 5px;
-    margin: 5px;
+    margin: 0.25rem;
     background-color: var(--two);
     color: white;
     font-weight:bolder;
@@ -56,7 +68,3 @@ f#inputForm {
     font-style: italic;
     padding-left: 20px;
 }
-.nav-link {
-    text-decoration: none !important;
-    color: #5cb9ff; 
- }
