--- a/frontend/src/components/Reviews/ReviewNew/ReviewNew.css
+++ b/frontend/src/components/Reviews/ReviewNew/ReviewNew.css
@@ -1,36 +1,37 @@
-#newReviewContainer {
-    display: flex;
-    justify-content: space-between;
-    width: 100vw;
-    height: 100vh;
-    background-color: aquamarine;
+#combinedFormContainerNR{
+    position: absolute;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width:40rem;
+    height:50rem;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    border: 2px solid var(--two);
+    border-radius: 1rem;
+    background-color: white;
+    background-color: var(--one);
+
 }
 
-#leftGutter {
-    display: flex;
-    width: 700px;
-}
-#center {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-}
-#reviewForm {
+#formNR {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
     width: max(500px, 40%);
     height: 100vh;
+    background-color: pink;
 }
 
 #ratingReview {
     display: flex;
     flex-direction: column;
     justify-content: center;
-
     margin-left: 50px;
+    background-color: blueviolet;
 }
 .title {
     padding: 20px 0px;
@@ -48,10 +49,6 @@
     color: var(--two);
 }
 
-#rightGutter {
-    display: flex;
-    width: max(700px, 100%);
-}
 .imgRN {
     height: 100px;
     margin-top: 15px;
